Fix layout bug for large quotes

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 html {
   font-size: 20px;
-  font-family: 'Quintessential', cursive;
+  /*font-family: 'Quintessential', cursive;*/
   color: #fff;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 body {
   background-color: #232323;
+  position: relative;
+  min-height: 100vh;
 }
 
 .bg-video {
@@ -26,14 +28,12 @@ body {
 }
 
 .container {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  width: 80%;
+  width: 60%;
   margin: 0 auto;
-  position: relative;
 }
 
 .main-heading {
@@ -41,10 +41,8 @@ body {
   font-family: 'Tangerine', cursive;
   font-size: 3rem;
   text-transform: capitalize;
-  position: absolute;
-  top: 2rem;
-  left: 50%;
-  transform: translateX(-50%);
+  text-align: center;
+  margin-top: 4rem;
 }
 
 .quote-box {
@@ -53,20 +51,18 @@ body {
   word-spacing: .5rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  min-height: 70vh;
 }
 
 .quote-author { font-size: 1.2rem; }
 
 .buttons-box {
-  position: absolute;
-  bottom: 4rem;
-  left: 50%;
-  transform: translateX(-50%);
+  position: fixed;
+  top: 50%;
+  right: 3rem;
+  /*transform: translateX(-50%);*/
 }
 
 .btn,
